--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
 ga_domain: huangxuan.me
 
 # Sidebar settings
-sidebar: false # whether or not using Sidebar.
+sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "We are always here to survive."
 sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
