--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Zyeil Blog
 SEOTitle: 喝水的博客 | Zyeil Blog
-header-img: img\avatar.jpg
+header-img: img\avatar.png
 email: zyeil666@gmail.com
 description: "这里是 @Zyeil 的个人博客，与你一起发现更大的世界"
 keyword: "go ahead, math, colorful world"
