--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,6 @@ plugins: [jekyll-paginate]
 markdown: kramdown
 kramdown:
   input: GFM # use Github Flavored Markdown !important
-  math_engine: mathjax
   syntax_highlighter_opts:
     span:
       line_numbers: false
@@ -87,17 +86,4 @@ chrome-tab-theme-color: "#000000"
 service-worker: true
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: true
-
-# Friends
-#friends:
-#  [
-#    { title: "乱序（Midare）", href: "http://mida.re/" },
-   # { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-#   { title: "Kun Qian", href: "http://kunq.me" },
-  #  { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-#    { title: "SmdCn", href: "http://blog.smdcn.net" },
-  #  { title: "JiyinYiyong", href: "http://tiye.me/" },
-#    { title: "DHong Say", href: "http://dhong.co" },
-#    { title: "尹峰以为", href: "http://ingf.github.io/" },
- # ]
+page-mathjax: false
